PortalPackage/ Enrollment Rx Core/objects/High_School__c.object
<CustomObject>
    <description>ERx Custom object linking prospects/students to HS as well as guidance counselors/employees at each HS</description>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Parochial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waldorf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montessori</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alumni_Code__c</fullName>
        <inlineHelpText>This field populates from Banner and includes an auto-generated code for Alumni groups</inlineHelpText>
        <label>Alumni Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEEB_Code__c</fullName>
        <label>CEEB Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_School_City__c</fullName>
        <label>High School City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>High_School_Fax_Number__c</fullName>
        <label>High School Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>High_School_Phone_Number__c</fullName>
        <label>High School Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>High_School_State__c</fullName>
        <label>High School State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_School_Street_Address__c</fullName>
        <label>High School Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>High_School_Web_Address__c</fullName>
        <label>High School Web Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>High_School_Zip_Postal_Code__c</fullName>
        <label>High School Zip/Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Visit__c</fullName>
        <label>Last Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Visit__c</fullName>
        <label>Next Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_High_School_Name__c</fullName>
        <label>Preferred High School Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retention_Field__c</fullName>
        <label>Retention Field</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_High_School__c</fullName>
        <label>Type of High School</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Will_Visit_Again__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Will Visit Again?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_High_School_Seniors__c</fullName>
        <label># of High School Seniors</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>High School</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>High_School_City__c</columns>
        <columns>High_School_State__c</columns>
        <columns>Type_of_High_School__c</columns>
        <columns>CEEB_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>High School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>High Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>